--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FrontSnapwriter",
+  "name": "FrontSnapWriter",
   "version": "0.1.0",
   "description": "",
   "main": "main.js",
@@ -13,7 +13,6 @@
     "electron-prebuilt": "^0.36.2"
   },
   "dependencies": {
-    "codemirror": "^5.10.0",
-    "moment": "^2.10.6"
+    "codemirror": "^5.10.0"
   }
 }
